@@ -105,12 +105,18 @@ program glint_example
   logical :: out    ! Outputs set flag
   integer :: i,j    ! Array index counters
   integer :: time   ! Current time (hours)
+  real(kind=dp) t1,t2
+  integer clock,clock_rate
 
   ! -------------------------------------------------------------------------------------
   ! Executable code starts here - Basic initialisation
   ! -------------------------------------------------------------------------------------
 
   call glint_GetCommandline()
+
+  ! start timing
+  call system_clock(clock,clock_rate)
+  t1 = real(clock,kind=dp)/real(clock_rate,kind=dp)
 
   ! Initialise climate
 
@@ -195,7 +201,9 @@ program glint_example
   ! Finalise/tidy up everything ------------------------------------------------------------
 
   call end_glint(ice_sheet)
-  call glimmer_writestats(commandline_resultsname,commandline_configname)
+  call system_clock(clock,clock_rate)
+  t2 = real(clock,kind=dp)/real(clock_rate,kind=dp)
+  call glimmer_writestats(commandline_resultsname,commandline_configname,t2-t1)
 
 100 format(f9.5)
 101 format(e12.5)
