@@ -1,4 +1,15 @@
 2009-05-05 Magnus Hagdorn
+ * src/fortran/eis_glide.F90: get elapsed wall clock time
+ * src/fortran/eismint3_glide.F90: ditto
+ * src/fortran/glex_ebm.F90: ditto
+ * src/fortran/glint_example.F90: ditto
+ * src/fortran/simple_glide.F90: ditto
+ * src/fortran/glimmer_writestats.F90: add wall clock time to list of arguments
+ * src/fortran/test_writestats.F90: pass wall clock time
+ * src/fortran/writestats.c: also store wall clock time in results file
+ * src/fortran/writestats.h: update prototype
+
+2009-05-05 Magnus Hagdorn
  * m4macros/netcdf.m4: minor improvement
  * src/fortran/Makefile.am: forgot to add NETCDF_LDFLAGS
 
